// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HorizontalAxis /> does not render ticks when \`TEST_PROPS.data\` is [] 1`] = `
<div
  class="sc-bwzfXH jCAOBG sc-bdVaJa bJonzb"
  data-testid="HorizontalAxis"
/>
`;

exports[`<HorizontalAxis /> does not update when \`props.data\` is changed to [] 1`] = `
<div
  class="sc-bwzfXH jCAOBG sc-bdVaJa bJonzb"
  data-testid="HorizontalAxis"
>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
</div>
`;

exports[`<HorizontalAxis /> does not update when \`props.data\`, \`props.tickCount\` does not change & other props changes 1`] = `
<div
  class="sc-bwzfXH jCAOBG sc-bdVaJa bJonzb"
  data-testid="HorizontalAxis"
>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
</div>
`;

exports[`<HorizontalAxis /> renders without crashing 1`] = `
<div
  class="sc-bwzfXH jCAOBG sc-bdVaJa bJonzb"
  data-testid="HorizontalAxis"
>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
</div>
`;

exports[`<HorizontalAxis /> updates when \`props.tickCount\` changes 1`] = `
<div
  class="sc-bwzfXH jCAOBG sc-bdVaJa bJonzb"
  data-testid="HorizontalAxis"
>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
  <div
    class="tick sc-htpNat cghrJv"
  >
    Dec 31
  </div>
</div>
`;
